<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BTPhone</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc">图片描述</string>
    <string name="devices_title">已连接到手机</string>
    <string name="search_devices">搜索手机</string>
    <string name="dial">正在拨号</string>
    <string name="title_activity_dial">DialActivity</string>
    <string name="title_activity_incoming">IncomingActivity</string>
    <string name="del_device">清空列表</string>
    <string name="unknown_number">未知号码</string>
    <string name="pari_devices">已配对设备</string>
    <string name="search_contact">搜索联系人</string>
    <string name="already_search_devices">已搜索到的手机</string>
    <string name="sync_mobile_number">同步手机号码</string>
    <string name="already_pari_mobile">已连接的手机</string>
    <string name="missed_calls">未接电话</string>
    <string name="received_calls">已接电话</string>
    <string name="dialed_calls">已拨电话</string>
    <string name="series_number">本机序列号：330327**********</string>
    <string name="text">  注：\n
            1.此序列号为设备唯一识别编码，供出厂设置使用，获取后不可撤销，请慎用！\n
            2.获取序列号之后，请及时在设备上贴上对应序列号标签，以免混淆。</string>
    <string name="get_series">请在网络连接状态点击获取序列号</string>
    <string name="native_series">本机序列号：</string>
    <string name="default_btname">H25302</string>
    <string name="series1">330327***</string>
    <string name="series2">330328***</string>
    <string name="series3">330329***</string>
    <string name="series4">330010***</string>
    <string name="series5">330020***</string>
    <string name="series6">330030***</string>
    <string name="hint">机器内已检测到高德离线地图</string>
    <string name="call_time">通话时间</string>
    <string name="come_call">来电</string>
    <string name="dialog_del">是否要清空设备列表？</string>
    <string name="dialog_hint">温馨提示</string>
    <string name="enter_pairing_mode">进入配对模式</string>
</resources>
